--- a/style.css
+++ b/style.css
@@ -71,8 +71,11 @@
 
   .logo-img {
     height: 6.5vw;
+    }
+  #map {
+    height: 35vh;
+    margin-bottom: 0.5%;
   }
-
   .bus-select {
     margin-bottom: 2.5%;
   }
